syntax = "proto3";
package com.tecnico.lemon.contract;
import "ResponseCode.proto";

message UserReq {
  string email = 1;
}

message UserResp {
  string password = 1;
}

message CreateUserReq {
  string email = 1;
  string key = 2;
  string type = 3;
}

message CreateUserResp {
  ResponseCode operationCode = 1;
}

message LookupUserReq {
  string email = 1;
}

message LookupUserResp {
  string email = 1;
  string key = 2;
  string type = 3;
}

service UserTableService {
  rpc getUser(UserReq) returns (UserResp);
  rpc createUser(CreateUserReq) returns (CreateUserResp);
  rpc lookupUser(LookupUserReq) returns (LookupUserResp);
}